Criação do componente de consulta de ingredientes

--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -15,6 +15,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" routerLink="/cadastro/categoria">Categoria</a>
+            <a class="dropdown-item" routerLink="/cadastro/ingrediente">Ingrediente</a>
           </div>
         </li>
       </ul>
