--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -18,6 +18,9 @@
             <a class="dropdown-item" routerLink="/cadastro/ingrediente">Ingrediente</a>
           </div>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#" (click)="logoff()">Sair</a>
+          </li>        
       </ul>
     </div>
   </nav>
